[package]
name = "frieren"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "= 53.1.0"
iceberg = "0.4.0"
iceberg-catalog-memory = "0.4.0"
sqlparser = "0.55.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
chrono = "= 0.4.39"
parquet = "= 53.1.0"
uuid = "1.16.0"

[dev-dependencies]
tempfile = "3.19.1"
