[package]
name = "frieren"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "= 54.2.0"
iceberg = { git = "https://github.com/apache/iceberg-rust.git" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust.git" }
iceberg-catalog-memory = { git = "https://github.com/apache/iceberg-rust.git" }
sqlparser = "0.55.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
chrono = "= 0.4.39"
parquet = "= 54.2.0"
uuid = "1.16.0"
futures = "0.3.31"
futures-util = "0.3.31"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.19.1"
